Changelog
=========

1.1.4 (unreleased)
------------------

- Added dutch translation [ralphjacobs]
- Added russian and ukrainian translation [bogdangi]


1.1.3 (2013-09-18)
------------------

- i18n portlet name and description.
  [thomasdesvenain]

- Plone 4.3 JQuery compatibility.
  [thomasdesvenain]

- Added views for ajax behaviour.
  [thomasdesvenain]


1.1.1 (2013-04-19)
------------------

- Fixed and improved tests.
  [thomasdesvenain]


1.1 (2012-10-31)
----------------

- Info message is different if added/remove document is folderish or not.
  [thomasdesvenain]


1.0 (2012-08-24)
----------------

- Fixed failure on views.
  [thomasdesvenain]


1.0rc1 (2012-06-29)
-------------------

- Package created using zopeskel
  [thomasdesvenain]